# churnopt

./: .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.txt  Makefile  OPTIMIZATION_MODES.md  PRE_PUSH_CHECKLIST.txt  PRODUCTION_READY.md  PROFIT_CURVE_ECONOMICS.md  README.md  README_OLD.md  SYSTEM_DESIGN.md  WHAT_I_BUILT.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.sh
.github/workflows/: ci.yml
configs/: data.yaml  decision.yaml  features.yaml  inference.yaml  monitoring.yaml  training.yaml
datasets/: SCHEMA.md
deployment/: DEPLOYMENT.md  Dockerfile  docker-compose.yml
deployment/kubernetes/: README.md  api-deployment.yaml  configmap.yaml  cronjobs.yaml  ingress.yaml  namespace.yaml  pvc.yaml
docs/: INTERVIEW_GUIDE.md  SYSTEM_DESIGN.md
models/: registry.json
notebooks/: demo.py
outputs/experiments/: ab_test_results.json  control_cohort.csv  treatment_cohort.csv
outputs/reports/: breakeven_analysis.csv  optimization_comparison.txt  profit_curve_data.csv
src/analysis/: __init__.py  profit_curve.py
src/data_ingestion/: __init__.py  loader.py  run.py  temporal_builder.py
src/decision_engine/: __init__.py  engine.py
src/experiments/: __init__.py  ab_test_simulator.py
src/feature_engineering/: __init__.py  feature_store.py  features.py
src/inference/: __init__.py  api.py  batch.py
src/models/: __init__.py  registry.py
src/monitoring/: __init__.py  drift_detector.py
src/training_pipeline/: __init__.py  run.py  trainer.py
src/utils/: __init__.py  config.py  date_utils.py  validation.py
tests/: conftest.py
tests/test_data_ingestion/: test_temporal_builder.py
